...
    <string name="bottom_navigation_shop">"Shop"</string>
    <string name="settings_help_title">"Help"</string>
    <string name="guided_brushing_title">"Guided brushing"</string>
    <string name="guided_brushing_start_message">"Turn on brush and get to brushing! "</string>
    <string name="guided_brushing_timer_subtitle">"Total brushing time"</string>
...

    <!-- Please remember that this string needs to contain `dialog_test_brushing_headline_highlight` (like trailing fullstop) - otherwise highlight won't be rendered -->
    <string name="dialog_test_brushing_headline">"Skip the guesswork, and get the facts."</string>
    <string name="dialog_test_brushing_headline_highlight">"."</string>
    <string name="dialog_test_brushing_start_button">"START TEST BRUSHING"</string>
    <string name="dialog_test_brushing_remind_later_button">"Remind me later, please"</string>
    <string name="guided_brushing_no_feedback">"You’re doing great, keep going!"</string>
    <string name="settings_item_delete_account">"Delete account"</string>
...

    <!-- Please remember that this string needs to contain `guided_brushing_start_screen_headline_highlight` (like trailing fullstop) - otherwise highlight won't be rendered -->
    <string name="guided_brushing_start_screen_headline">"Guided brushing can help you do your best"</string>
    <string name="guided_brushing_start_screen_headline_highlight">" "</string>
    <string name="guided_brushing_start_screen_body">"We’ll coach you through a full-length brushing activity to maintain good coverage, angle, and speed."</string>
    <string name="guided_brushing_start_screen_no_more_smiles">"Earn 2 points each time you play, up to 6 points per day."</string>
    <string name="guided_brushing_start_screen_start_button">"LET’S START"</string>
    <string name="cancel">"Cancel"</string>
    <string name="settings_vibration_levels">"Brushing program"</string>
    <string name="brushing_sync_progress_text">"syncing brushing sessions: %d%%"</string>
...
    <string name="test_brushing_ongoing_turn_off">"When you’re done, 
just turn off the brush."</string>
    <string name="test_brushing_start_brushing_header">"start brushing normally and turn your brush off when done."</string>
    <string name="test_brushing_start_brushing_highlight">"."</string>
    <string name="orphan_brushings_delete_title">"Are you sure?"</string>
...
    <string name="last_brushing_card_guided_brushing">"Guided brushing"</string>
    <string name="activities_task_points">"+%s pts"</string>
    <string name="activities_task_test_brushing_title">"What's your brushing style?"</string>
    <string name="activities_task_test_brushing_description">"Missing a spot - or two, or three? Racing through it? Let's test how you brush."</string>
    <string name="activities_task_speed_title">"Mind your speed"</string>
    <string name="activities_task_speed_description">"Not too slow, not too fast. Find the speed that's just right for cleaner smiles."</string>
    <string name="activities_task_angle_title">"Adjust your angles"</string>
    <string name="activities_task_angle_description">"Angle to fight plaque and brush your best."</string>
    <plurals name="earning_points_subtitle">
        <item quantity="one">"You earn %1$d point every time you brush."</item>
...
    <string name="onboarding_enter_email_input_hint">"Email address"</string>
    <string name="onboarding_enter_email_finish_button">"Finish"</string>
    <string name="activities_tasks_title">"Short tasks"</string>
    <string name="activities_tasks_description">"Keep it interesting with activities to help improve your brushing and earn points fast."</string>
    <string name="activities_guided_brushing_title">"Guided brushing"</string>
    <string name="activities_guided_brushing_description">"The best way to get results."</string>
    <string name="activities_guided_brushing_points">"+2 points"</string>
    <string name="home_screen_smile_points">"smile points"</string>
    <string name="profile_header_text">"Use your smile to change the world,
...
    <string name="push_notification_channel_general">"General notifications"</string>
    <string name="checkup_title_highlight">"."</string>
    <string name="home_error_no_toothbrush_connected">"Toothbrush not connected"</string>
    <string name="home_error_no_toothbrush_connected_close">"CLOSE"</string>
    <string name="toolbox_home_explanation_title">"Tap wherever you see a tour point like this one to help you find your way around!"</string>
...
    <string name="form_shipping_generic_error">"You have entered an invalid address, please try again"</string>
    <string name="settings_about_screen_instagram">"Instagram"</string>
    <string name="dialog_test_brushing_no_more_smiles">"Earn 2 smile points every time you play, and up to 6 points a day!"</string>
    <string name="tb_settings_mandatory_ota_title">"Toothbrush failed to update, start the recovery!"</string>
    <string name="tb_settings_mandatory_ota_proceed">"RECOVER"</string>
    <string name="mandatory_ota_dialog_title">"mandatory update needed"</string>

    <!-- Fuzzy -->
    <string name="mandatory_ota_dialog_body">"Your brush needs to be updated before using it. Please start the update now."</string>

    <!-- Fuzzy -->
    <string name="mandatory_ota_dialog_proceed">"start update"</string>
    <string name="mind_your_speed_start_screen_title">"brushing too fast can damage your gums"</string>
    <string name="mind_your_speed_start_screen_description">"Evaluate and improve your technique by maintaining a good brushing speed for 7 seconds on each segment."</string>
    <string name="mind_your_speed_start_screen_description_highlight">"7 seconds"</string>
    <string name="mind_your_speed_start_screen_description2">"Earn 2 smile points each time you play, up to 6 points per day."</string>
    <string name="mind_your_speed_start_screen_start">"Let’s start"</string>
    <string name="mind_your_speed_start_screen_cancel">"Cancel"</string>
    <string name="home_bluetooth_unavailable_snackbar">"Bluetooth disabled"</string>
    <string name="home_location_unavailable_snackbar">"Location disabled"</string>
...
    <!-- Info displayed on the question of the day card when question is not available -->
    <string name="question_of_the_day_card_question_not_available">"Come back tomorrow to answer a different question and ear more smile points"</string>
    <string name="mind_your_speed_title">"mind your speed."</string>

    <!-- This one is responsible for dot highlight at the end of `mind_your_speed_title`. Please make sure `mind_your_speed_title` contains the content we want to highlight by this one. -->
    <string name="mind_your_speed_title_highlight">"."</string>
    <string name="mind_your_speed_legend_good">"Good"</string>
    <string name="mind_your_speed_legend_slow_or_fast">"Slow or fast"</string>
    <string name="mind_your_speed_no_feedback">"Perfect speed!"</string>
    <string name="mind_your_speed_pause_menu_header">"Pause"</string>
    <string name="mind_your_speed_pause_menu_resume_button">"Resume"</string>
    <string name="mind_your_speed_pause_menu_restart_button">"Restart"</string>
    <string name="mind_your_speed_pause_menu_quit_button">"Quit"</string>
    <string name="mind_your_speed_start_message">"Turn on your brush and start brushing!"</string>
    <string name="mind_your_speed_wrong_zone_feedback">"You’re brushing the wrong segment!"</string>
    <string name="mind_your_speed_too_fast_feedback">"You’re brushing too fast, slow down!"</string>
...
