...
      android:layout_marginStart="@dimen/dot_quad"
      android:layout_marginEnd="@dimen/dot_quad"
      android:layout_marginBottom="@dimen/dot_quad"
      android:text="@string/mind_your_speed_start_screen_description2"
      android:textAppearance="?textAppearanceBody2"
      android:textColor="?android:textColorSecondary"
      app:layout_constraintBottom_toTopOf="@id/start_button"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.5"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/body" />

    <TextView
...
